{
    "name": "InputActions",
    "maps": [
        {
            "name": "PlayerDefault",
            "id": "1cb6dbfc-564f-4da3-aec2-45ed3d14b09f",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "1a4dda47-2ffe-4761-b856-841926bf8448",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CastSpell",
                    "type": "Button",
                    "id": "0ea5847e-7631-41a2-ab19-9566c36ab4af",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AddOrb1",
                    "type": "Button",
                    "id": "debccc8d-82c1-473c-a063-9e871afa4404",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AddOrb2",
                    "type": "Button",
                    "id": "5699c79b-00ff-4fbd-bf5b-f2dfa79abd02",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AddOrb3",
                    "type": "Button",
                    "id": "4509d393-0c2d-48b3-beee-74525d972994",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AddOrb4",
                    "type": "Button",
                    "id": "3f1587dc-e80d-4b09-94c3-23078b32ada4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AddOrb5",
                    "type": "Button",
                    "id": "f6a0f3f4-9357-4692-9261-ef84550122b5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AddOrb6",
                    "type": "Button",
                    "id": "ead116a1-348f-4b9e-a2bc-103df47a39a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenInventory",
                    "type": "Button",
                    "id": "cf553a0a-a677-486a-ac4c-47fe7f701b4f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector WASD",
                    "id": "95b522b3-dbbd-488b-aabc-36e0f066c130",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8442b1e9-262b-421f-9ae0-bcd981fa0095",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d00fb70f-cad7-4fc8-8087-1c23bc695c8c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f862473a-c5b3-4aab-ae21-902c50d297ac",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9f9d0ebd-b51a-4f2f-9e47-053c6b54b2dd",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "642dbb8b-e585-4c1e-a3b6-25779f4be88f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CastSpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a83f63c9-9125-4b64-8302-adb65535deb5",
                    "path": "<Keyboard>/numpad1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AddOrb1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "228eace9-3cca-453e-9273-17ce523db795",
                    "path": "<Keyboard>/numpad2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AddOrb2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f71478a-f884-44bd-8361-ce4683439c7b",
                    "path": "<Keyboard>/numpad3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AddOrb3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "266b5732-4801-4062-a0d9-8dceb9aef1d2",
                    "path": "<Keyboard>/numpad4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AddOrb4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6ef41df-5fbf-4522-b2d8-64b7684d6a4f",
                    "path": "<Keyboard>/numpad5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AddOrb5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f67ddd1-385e-40a6-ba19-412bcc79448e",
                    "path": "<Keyboard>/numpad6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AddOrb6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00cef429-d83a-4988-885f-dd2bb3b71b33",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Inventory",
            "id": "76df686c-dc9d-4a45-a28a-f1ab44e72e1c",
            "actions": [
                {
                    "name": "CloseInventory",
                    "type": "Button",
                    "id": "ad47f595-beca-4080-86ad-2044802eea88",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "59bc139f-2828-4606-bb75-eba50df6339e",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}